# screenpen

./: AUTHORS  CMakeLists.txt  screenpen.spec.rpkg  sources.cmake
src/: main.cpp  screenwidget.cpp  screenwidget.h  screenwidget.ui
